# file-transfer

./: .gitignore  README.md  build.bat  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yaml  release.yml
backend/: .gitignore  Cargo.toml  rust-toolchain.toml
backend/.cargo/: config
backend/src/: main.rs
backend/src/service/: file_service.rs  mod.rs  sqlite.rs
backend/src/vojo/: base_response.rs  common_error.rs  get_path_res.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  downloadPage.jsx  index.css  main.jsx  settingPage.jsx  uploadPage.jsx
frontend/src/utli/: axios.js
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: backup.icns  icon.icns
src-tauri/src/: main.rs
src-tauri/src/common_tools/: about.rs  base64.rs  cmd.rs  database.rs  format.rs  git.rs  mod.rs  sql_lite.rs
src-tauri/src/sql_lite/: connection.rs
src-tauri/src/vojo/: common_constants.rs  git_statistic.rs  menu_config.rs  mod.rs
src/dashboard/: page.tsx
src/dashboard/components/: sidebar.tsx  spinner.tsx
src/dashboard/menu/: about-dialog.tsx  createLinkDialog.tsx  languageMenu.tsx  menu.tsx  preferenceDialog.tsx  themModeMenu.tsx
src/dashboard/page/: authorPage.tsx  base64ImagePage.tsx  base64Page.tsx  baseInfoPage.tsx  commitPage.tsx  newNav.tsx
src/locales/en/: main.json
src/locales/zh/: main.json
src/styles/: globals.css
